--- a/Rx.Contrib/Rx.Contrib.csproj
+++ b/Rx.Contrib/Rx.Contrib.csproj
@@ -61,7 +61,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AwaitableObservable.cs" />
+    <Compile Include="AwaitableSubscription.cs" />
     <Compile Include="IAsyncDisposable.cs" />
     <Compile Include="ObservableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
