--- a/Rx.Contrib/Rx.Contrib.csproj
+++ b/Rx.Contrib/Rx.Contrib.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="AwaitableSubscription.cs" />
     <Compile Include="IAsyncDisposable.cs" />
+    <Compile Include="IAwaitableSubscription.cs" />
     <Compile Include="ObservableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
