--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,83 @@
-*.dotCover
-StyleCop.Cache
-!*.?.?.ReSharper
-_TeamCity*/
-_dotTrace*/
-*.orig
-*.tmp_*
+Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
 
-#ignore thumbnails created by windows
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+*.odb
+*.odb$
+*.db
+*.db.properties
+*.db.script
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
 Thumbs.db
 
-#Ignore files build by Visual Studio
-*.obj
-*.exe
-*.pdb
+# Netbeans #
+############
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+private/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+###############
+*.class
+
+# Package Files #
+#################
+*.jar
+*.war
+*.ear
+
+# Backup files #
+################
+*.bak
+
+# TextEdit swap file #
+######################
+*~
+
+#Visual Studio files
+*.[Oo]bj
 *.user
 *.aps
 *.pch
 *.vspscc
+*.vssscc
 *_i.c
 *_p.c
 *.ncb
@@ -24,29 +85,53 @@ Thumbs.db
 *.tlb
 *.tlh
 *.bak
-*.cache
+*.[Cc]ache
 *.ilk
 *.log
-[Bb]uild/
-[Bb]in/
-[Dd]ebug*/
 *.lib
 *.sbr
-obj/
+*.sdf
+*.opensdf
+*.unsuccessfulbuild
+ipch/
+[Oo]bj/
+[Bb]in
+[Dd]ebug*/
 [Rr]elease*/
+Ankh.NoLoad
+.nuget/
+
+#MonoDevelop
+*.pidb
+*.userprefs
+
+#Tooling
 _ReSharper*/
+*.resharper
 [Tt]est[Rr]esult*
-ClientBin/
-Generated_Code/
-*.sln.ide/
+*.sass-cache
 
-**/.nuget/
-**/packages
+#Project files
+[Bb]uild/
 
-*.suo
-*.svclog
+#Subversion files
+.svn
 
-*.ncrunch
-nCrunchTemp_*
-_NCrunch_*/
-us.stackdump
+# Office Temp Files
+~$*
+
+# vim Temp Files
+*~
+
+#NuGet
+.nuget/
+packages/
+*.nupkg
+
+#ncrunch
+*ncrunch*
+*crunch*.local.xml
+
+# visual studio database projects
+*.dbmdl
+
