Add some new methods for asynchronous operations using TPL.

--- a/Rx.Contrib/Rx.Contrib.csproj
+++ b/Rx.Contrib/Rx.Contrib.csproj
@@ -80,6 +80,7 @@
       <SubType>Code</SubType>
     </Compile>
     <AppDesigner Include="Properties\" />
+    <Compile Include="ValueHolder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.snk" />
