--- a/Rx.Contrib.nuspec
+++ b/Rx.Contrib.nuspec
@@ -2,19 +2,23 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>Rx.Contrib</id>
-        <version>0.4.5</version>
+        <version>1.0.0</version>
         <title>Rx.Contrib</title>
         <authors>Burgy Benjamin</authors>
         <owners>Burgy Benjamin</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Contains some extension methods for Rx.</description>
         <language>en-US</language>
-        <tags>rx, async, observable</tags>
+        <tags>rx, async, observable, core, standard</tags>
         <dependencies>
-            <group targetFramework=".NETFramework4.5.1">
-                <dependency id="Rx-Core" version="2.2.5" />
-                <dependency id="Rx-Interfaces" version="2.2.5" />
-                <dependency id="Rx-Linq" version="2.2.5" />
+            <group targetFramework="netstandard1.0">
+                <dependency id="System.Reactive.Core" version="3.1.1" />
+                <dependency id="System.Reactive.Interfaces" version="3.1.1" />
+                <dependency id="System.Reactive.Linq" version="3.1.1" />
+                <dependency id="System.Threading" version="4.3.0" />
+                <dependency id="System.Runtime" version="4.3.0" />
+                <dependency id="NETStandard.Library" version="1.6.0" />
+                <dependency id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" />
             </group>
         </dependencies>
     </metadata>
