--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: csharp
+env:
+ global:
+  - EnableNuGetPackageRestore=true 
 solution: Rx.Contrib.sln
-install:
-  - nuget restore Rx.Contrib.sln -Verbosity detailed
