--- a/Rx.Contrib.nuspec
+++ b/Rx.Contrib.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>Rx.Contrib</id>
-        <version>1.0.2</version>
+        <version>1.1.1</version>
         <title>Rx.Contrib</title>
         <authors>Burgy Benjamin</authors>
         <owners>Burgy Benjamin</owners>
@@ -11,21 +11,24 @@
         <language>en-US</language>
         <tags>rx, async, observable, core, standard</tags>
         <dependencies>
-            <group targetFramework="netstandard1.5">
+            <group targetFramework="netstandard2.0">
                 <dependency id="System.Reactive.Core" version="3.1.1" />
-                <dependency id="System.Reactive.Interfaces" version="3.1.1" />
-                <dependency id="System.Reactive.Linq" version="3.1.1" />
                 <dependency id="System.Reflection" version="4.3.0" />
                 <dependency id="System.Runtime" version="4.3.0" />
             </group>
-			<group targetFramework=".NETFramework4.5.1">
+	          <group targetFramework=".NETFramework4.5.1">
                 <dependency id="System.Reactive.Core" version="3.1.1" />
             </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="Rx.Contrib\bin\Release\Rx.Contrib.dll" target="lib\net451\Rx.Contrib.dll" />
-        <file src="Rx.Contrib\bin\Release\Rx.Contrib.pdb" target="lib\net451\Rx.Contrib.pdb" />
-        <file src="Rx.Contrib\bin\Release\Rx.Contrib.XML" target="lib\net451\Rx.Contrib.XML" />
+      <file src="Rx.Contrib\bin\Release\netstandard2.0\Rx.Contrib.dll" target="lib\netstandard2.0\Rx.Contrib.dll" />
+      <file src="Rx.Contrib\bin\Release\netstandard2.0\Rx.Contrib.pdb" target="lib\netstandard2.0\Rx.Contrib.pdb" />
+      <file src="Rx.Contrib\bin\Release\netstandard2.0\Rx.Contrib.deps.json" target="lib\netstandard2.0\Rx.Contrib.deps.json" />
+      <file src="Rx.Contrib\bin\Release\Rx.Contrib.XML" target="lib\netstandard2.0\Rx.Contrib.XML" />
+
+      <file src="Rx.Contrib\bin\Release\net451\Rx.Contrib.dll" target="lib\net451\Rx.Contrib.dll" />
+      <file src="Rx.Contrib\bin\Release\net451\Rx.Contrib.pdb" target="lib\net451\Rx.Contrib.pdb" />
+      <file src="Rx.Contrib\bin\Release\Rx.Contrib.XML" target="lib\net451\Rx.Contrib.XML" />
     </files>
 </package>
