--- a/Rx.Contrib/Rx.Contrib.csproj
+++ b/Rx.Contrib/Rx.Contrib.csproj
@@ -12,15 +12,14 @@
     <PackageProjectUrl>https://github.com/minidfx/Rx.Contrib</PackageProjectUrl>
     <RepositoryUrl>https://github.com/minidfx/Rx.Contrib</RepositoryUrl>
     <PackageTags>ReactiveExtensions, Rx, Observable</PackageTags>
-    <Version>1.1.4</Version>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard2.0|AnyCPU'">
-    <DocumentationFile>bin\Release\Rx.Contrib.xml</DocumentationFile>
+    <Version>1.1.5</Version>
+    <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(MSBuildProjectName).xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
+    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1">
+      <PrivateAssets>true</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="System.Reactive.Core" Version="4.1.2" />
   </ItemGroup>
 
