--- a/Rx.Contrib/Rx.Contrib.csproj
+++ b/Rx.Contrib/Rx.Contrib.csproj
@@ -17,9 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1">
-      <PrivateAssets>true</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="JetBrains.Annotations" Version="*" PrivateAssets="all" />
     <PackageReference Include="System.Reactive.Core" Version="4.1.2" />
   </ItemGroup>
 
