--- a/Rx.Contrib/Rx.Contrib.csproj
+++ b/Rx.Contrib/Rx.Contrib.csproj
@@ -14,6 +14,8 @@
     <PackageTags>ReactiveExtensions, Rx, Observable</PackageTags>
     <Version>1.1.7</Version>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(MSBuildProjectName).xml</DocumentationFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
