--- a/Rx.Contrib/Rx.Contrib.csproj
+++ b/Rx.Contrib/Rx.Contrib.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Rx.Contrib</AssemblyName>
     <PackageId>Rx.Contrib</PackageId>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
@@ -12,7 +12,7 @@
     <PackageProjectUrl>https://github.com/minidfx/Rx.Contrib</PackageProjectUrl>
     <RepositoryUrl>https://github.com/minidfx/Rx.Contrib</RepositoryUrl>
     <PackageTags>ReactiveExtensions, Rx, Observable</PackageTags>
-    <Version>1.3.1</Version>
+    <Version>1.4.0</Version>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(MSBuildProjectName).xml</DocumentationFile>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
@@ -20,7 +20,6 @@
 
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="*" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
     <PackageReference Include="System.Reactive.Core" Version="5.0.0" />
   </ItemGroup>
 
