Update travis build configuration.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: csharp
 mono: none
-dist: trusty
-dotnet: 2.1.4
+dist: xenial
+dotnet: 6.0.400
 script:
   - dotnet restore
-  - dotnet build -f netstandard2.0
-notifications:
-  webhooks: https://outlook.office.com/webhook/2f92c602-7feb-4a6c-86f1-477271aec76f@990414fa-d0a3-42f5-b740-21d864a44a28/IncomingWebhook/54e43eb586f14aa9984d4c0bec3d5050/539ce6fa-e9aa-413f-a79b-fb7e8998fcac
+  - dotnet build --no-restore -f net6.0
